test/types/unions/badVisit3.good
badVisit3.chpl:8: error: wrong number of functions passed to visit
